clusters/vps1/config/kiali/kiali-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "kiali-dev.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
