clusters/vps1/config/kiali/kiali-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: kiali
spec:
  hosts:
  - "kiali.jkulzer.dev"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
